force-app/main/default/objects/Verification_Session__c/Verification_Session__c.object-meta.xml
<CustomObject><label>Verification Session</label><pluralLabel>Verification Sessions</pluralLabel><nameField><label>Verification Session Name</label><type>Text</type></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>ReadWrite</sharingModel><enableActivities>false</enableActivities></CustomObject>