force-app/main/default/objects/Verification_Session__c/fields/Otp__c.field-meta.xml
<CustomField><fullName>Otp__c</fullName><label>Otp</label><type>Text</type><length>10</length></CustomField>