force-app/main/default/objects/Verification_Session__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>true</default><label>Pending</label></value><value><fullName>Verified</fullName><default>false</default><label>Verified</label></value><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value></valueSetDefinition><restricted>true</restricted></valueSet></CustomField>