force-app/main/default/objects/Verification_Session__c/fields/Token__c.field-meta.xml
<CustomField><fullName>Token__c</fullName><label>Token</label><type>Text</type><length>255</length></CustomField>