force-app/main/default/objects/Verification_Session__c/listViews/All.listView-meta.xml
<ListView><fullName>All</fullName><label>All Sessions</label><filterScope>Everything</filterScope></ListView>